saves/test/demo_full_20240802_193545/count_clock/debug_1/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp count_clock_tb.v count_clock.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
count_clock_tb.v:124: $finish called at 24450000 (1ps)

iverilog cmd 2 error:

